# UniRefiner

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml
configs/: dinov2_giant.yaml  dinov3.yaml  dinov3_pro.yaml  evaclip8b.yaml  internvit_6b_224px.yaml  laion_clip_giant.yaml  rice_vit_large_560.yaml  sam3.yaml  sam3_pro.yaml  siglip2_giant_384.yaml  siglip2_so400m.yaml
tools/: setup_uv_env.sh
unirefiner/: __init__.py
unirefiner.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
unirefiner/cli/: train.py
unirefiner/config/: __init__.py  loader.py  runtime.py  schema.py
unirefiner/data/: __init__.py  dataset.py  transforms.py
unirefiner/diagnostics/: __init__.py  pca.py
unirefiner/method/: __init__.py  crops.py  losses.py  registers.py  unirefiner.py
unirefiner/models/: __init__.py  channel_mask.py  registry.py  weights.py
unirefiner/models/lora/: __init__.py  factory.py  target_modules.py
unirefiner/models/lora/presets/: linear_r-8.json
unirefiner/models/wrappers/: __init__.py  attention_hooks.py  base.py  dinov2.py  dinov3.py  evaclip8b.py  generic.py  internvit.py  openai_clip.py  position.py  rice.py  sam3.py  siglip2.py
unirefiner/spurious_filtering/: __init__.py  adaptive_register.py  attention_hijack.py  fp_gp.py  sampling.py
unirefiner/training/: __init__.py  checkpoint.py  distributed.py  logger.py  optimizer.py  scheduler.py  seed.py  trainer.py
