[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unirefiner"
version = "0.1.0"
description = "Open-source UniRefiner training project"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "einops>=0.8.0",
  "fsspec>=2024.0.0",
  "matplotlib>=3.8.0",
  "numpy>=1.26.0",
  "peft>=0.17.1,<0.18.0",
  "Pillow>=10.0.0",
  "PyYAML>=6.0.0",
  "safetensors>=0.4.0",
  "seaborn>=0.13.0",
  "timm>=1.0.20",
  "torch>=2.6.0,<2.7.0",
  "torchvision>=0.21.0,<0.22.0",
  "transformers>=4.57.0,<5.0.0",
  "wandb>=0.18.0",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["unirefiner*"]
